--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <artifactId>lagom-cinnamon</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>lightbend-commercial</id>
+            <name>Lightbend Commercial</name>
+            <url>https://lightbend.bintray.com/commercial-releases</url>
+        </repository>
+    </repositories>
+
     <packaging>pom</packaging>
 
     <modules>
@@ -117,6 +125,7 @@
                 <artifactId>lombok</artifactId>
                 <version>1.16.10</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
