--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,11 @@
                 <artifactId>lombok</artifactId>
                 <version>1.16.10</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.lightbend.cinnamon</groupId>
+                <artifactId>cinnamon-lagom_2.11</artifactId>
+                <version>2.8.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
