Add cinnamon-sandbox resolver

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
             <name>Lightbend Commercial</name>
             <url>https://lightbend.bintray.com/commercial-releases</url>
         </repository>
+        <repository>
+            <id>lightbend-contrail</id>
+            <name>Lightbend Contrail</name>
+            <url>https://dl.bintray.com/typesafe/commercial-maven-releases</url>
+        </repository>
     </repositories>
 
     <packaging>pom</packaging>
