--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
                 <artifactId>cinnamon-lagom_2.11</artifactId>
                 <version>2.8.3</version>
             </dependency>
+            <dependency>
+                <groupId>com.lightbend.cinnamon</groupId>
+                <artifactId>cinnamon-sandbox_2.12</artifactId>
+                <version>2.8.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
